--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
   </head>
   <body>
-    <canvas id='gl'></canvas>
+    <!-- <div id="interaction" onclick="mouseClicked()" onmousemove="mouseMoved(event)"> -->
+      <canvas id='gl'></canvas>
+    <!-- </div> -->
   </body>
   <script src="bundle.js" id='bundle' type='text/javascript'></script>
   <script type="text/javascript" src="build/dat.gui.min.js"></script> 
-
-  <!-- vertex shader, as simple as possible -->
 
 </html>
