--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <canvas id='gl'></canvas>
     <!-- </div> -->
   </body>
+  <script type="text/javascript" src="dat.gui.min.js"></script> 
   <script src="bundle.js" id='bundle' type='text/javascript'></script>
-  <script type="text/javascript" src="build/dat.gui.min.js"></script> 
 
 </html>
